# bomerai

./: README.md  docker-compose.yml  lefthook.yaml
services/bomer-forge-service/: cobertura_vectors.json  pyproject.toml  vectors.json
services/bomer-forge-service/ai/services/: runnables.py  runnables_test.py
services/bomer-forge-service/building_components/: admin.py  models.py
services/bomer-forge-service/building_components/migrations/: 0001_initial.py  0002_buildingcomponenttype_and_more.py  0002_columnreinforcementmetadata_and_more.py  0002_remove_buildingcomponent_unit_of_measure_and_more.py  0003_alter_buildingcomponent_description.py  0003_alter_columnreinforcementmetadata_image.py  0004_buildingcomponent_component_bom.py  0004_remove_columnreinforcementmetadata_image_and_more.py  0005_alter_buildingcomponent_type_buildingcomponent_floor_and_more.py  0005_columnreinforcementmetadatadocument_created_by_and_more.py  0006_remove_buildingcomponent_component_bom.py  0006_rename_document_columnreinforcementmetadatadocument_file.py  0007_remove_buildingcomponent_floor_and_more.py  0007_remove_columnreinforcementmetadatadocument_column_reinforcement_metadata_and_more.py
services/bomer-forge-service/building_components/rest/: serializers.py  urls.py  views.py
services/bomer-forge-service/building_components/services/: ai_structural_drawing_ingestion.py
services/bomer-forge-service/building_design_evaluations/: apps.py  models.py
services/bomer-forge-service/building_design_evaluations/migrations/: 0001_initial.py  0002_alter_buildingdesignevaluation_draft_building_design.py
services/bomer-forge-service/celery_worker/: celery.py
services/bomer-forge-service/celery_worker/rest/: urls.py  views.py
services/bomer-forge-service/configurable_variables/: admin_test.py  app.py  crypto_test.py
services/bomer-forge-service/configurable_variables/migrations/: 0001_initial.py
services/bomer-forge-service/configurable_variables/test/: utils.py  utils_test.py
services/bomer-forge-service/core/: base_model.py  db_constants.py  google_auth.py  urls.py
services/bomer-forge-service/core/constants/: __init__.py  cors.py  django.py  gunicorn.py  s3.py  service.py
services/bomer-forge-service/core/logging/: configure_logging.py
services/bomer-forge-service/core/secrets/: bomer-ai-5903df29fa96.json
services/bomer-forge-service/core/settings/: __init__.py  celery.py  core.py  cors.py  logging.py
services/bomer-forge-service/core/types/: environment.py  environment_test.py
services/bomer-forge-service/core/utils/: coroutines.py  user.py
services/bomer-forge-service/draft_building_designs/: admin.py  apps.py  embeddings.py  models.py  signals.py  tasks.py
services/bomer-forge-service/draft_building_designs/migrations/: 0001_initial.py  0002_alter_designdrawingcomponentmetadata_bom_and_more.py  (+32 more)
services/bomer-forge-service/materials/: models.py
services/bomer-forge-service/projects/: admin.py  models.py
services/bomer-forge-service/studies/: models.py
(+245 files in other folders)
